--- a/res/layout/scroll_layout.xml
+++ b/res/layout/scroll_layout.xml
@@ -24,7 +24,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
